--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-tkinter
+# geopandas
+# networkx
+# osmnx
 streamlit
 streamlit_lottie
 streamlit_folium
 altair
-geopandas
-networkx
-osmnx
 folium
 branca
 git+https://github.com/giswqs/leafmap
