--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/giswqs/leafmap
+--find-links=https://girder.github.io/large_image_wheels GDAL
 geopandas
 networkx
 osmnx
@@ -8,4 +8,4 @@ branca
 streamlit
 streamlit_lottie
 streamlit_option_menu
-click==8.0.4
+git+https://github.com/giswqs/leafmap
