--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
---find-links=https://girder.github.io/large_image_wheels GDAL
 geopandas
 networkx
 osmnx
@@ -9,3 +8,4 @@ streamlit
 streamlit_lottie
 streamlit_option_menu
 git+https://github.com/giswqs/leafmap
+rasterio --no-binary
