--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ osmnx
 altair
 folium
 branca
-streamlit
+streamlit==1.7.0
 streamlit_lottie
 streamlit_option_menu
 git+https://github.com/giswqs/leafmap
