--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+scikit-learn
+tensorflow
 geopandas
 networkx
 osmnx
@@ -6,6 +8,5 @@ folium
 branca
 streamlit==1.7.0
 streamlit_lottie
-streamlit_option_menu
 git+https://github.com/giswqs/leafmap
 click==8.0.4
